Corrected height on small screen

--- a/style.css
+++ b/style.css
@@ -154,17 +154,17 @@ footer p span{
     }
 
     header h1{
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     .container .output{
         width: 100%;
-        height: 45vh;
+        height: 35vh;
         background-color: red;
     }
 
     .container #redactedTextCont{
-        height: 42vh;
+        height: 35vh;
         padding: 10px;
     }
 
